a lot of stuff, division, checks, and refactoring